--- a/angular/package.json
+++ b/angular/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^10.2.1",
     "@aspnet/signalr": "^1.1.4",
     "@fortawesome/fontawesome-free": "^5.13.0",
+    "@types/simple-peer": "^9.6.2",
     "abp-ng2-module": "^6.2.0",
     "abp-web-resources": "^5.3.0",
     "admin-lte-css-only": "^3.0.4",
@@ -35,6 +36,7 @@
     "ngx-pagination": "^5.0.0",
     "push.js": "1.0.12",
     "rxjs": "^6.4.0",
+    "simple-peer": "^9.9.3",
     "sweetalert2": "^9.10.12",
     "ts-helpers": "^1.1.2",
     "tslib": "^2.0.0",
