--- a/aspnet-core/src/Code.Together.Application/Code.Together.Application.csproj
+++ b/aspnet-core/src/Code.Together.Application/Code.Together.Application.csproj
@@ -11,6 +11,9 @@
     <RootNamespace>Code.Together</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Abp.AspNetCore.SignalR" Version="6.0.0" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\Code.Together.Core\Code.Together.Core.csproj" />
   </ItemGroup>
 </Project>
